--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "@aws-cdk/aws-lambda": "^1.115.0",
     "@aws-cdk/core": "^1.115.0",
     "@aws-cdk/pipelines": "^1.115.0",
-    "aws-cdk": "^1.115.0"
+    "aws-cdk": "^1.115.0",
+    "source-map-support": "^0.5.19"
+  },
+  "devDependencies": {
+    "@types/node": "^16.4.2",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   }
 }
